# MNNT-1

./: (README) СНсТ ЛР 1 Плешков ет-122.docx  LICENSE  MNNT-1.vcxproj  MNNT-1.vcxproj.filters  NN.hpp  boost.html  crc32.h  main.cpp  meson.build  packages.config  test_run.txt
subprojects/program_options/: CMakeLists.txt
